--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,10 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.format_sql=true
 #spring.jpa.properties.hibernate.auto_quote_keyword = true
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=caophat113@gmail.com
+spring.mail.password=fsqdlfmfvarhixlf
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
